# himalaya-repl

./: CONTRIBUTING.md  Cargo.toml  README.md  config.sample.toml  flake.nix
.github/workflows/: pre-release.yml  release.yml
src/: backend.rs  cli.rs  config.rs  editor.rs  envelope.rs  id_mapper.rs  main.rs
src/account/: config.rs
